@@ -9,6 +9,7 @@ MANIFEST.SKIP
 README.md
 t/00-load.t
 t/10-new.t
+t/30-basics.t
 t/carp.t
 t/comment-spelling.t
 t/critic.t
